# Property-Value-Forecast

./: .gitignore  README.md  pyproject.toml  requirements_da.txt  requirements_mac.txt  requirements_mac_linux.txt  requirements_windows.txt
src/ARIMA/: Arima.ipynb
src/DQN/: dqn.py  dqn_Chicago.ipynb  dqn_Dallas.ipynb  dqn_LosAngeles.ipynb  dqn_NewYork.ipynb  dqn_Seattle.ipynb  dqn_base.ipynb  dqn_eval.ipynb  dqn_test.ipynb
src/Data_Processing/: BLS_cleaning.ipynb  HUD_cleaning.ipynb  census_nhu_data.py  climate_req.ipynb  df_merge.ipynb  log_stdout.py  process_zhvi.ipynb
src/LSTM/: LSTM_Chicago.ipynb  LSTM_Dallas.ipynb  LSTM_LosAngeles.ipynb  LSTM_NewYork.ipynb  LSTM_Seattle.ipynb  LSTM_WindowSize_Tuning.ipynb  MeanBaseline_LSTMBaseline.ipynb
ss24_capstone_team23_datallah_nkitts_steveso/: LSTM_Baseline.ipynb  LSTM_FeatureImportanceAnalysis.ipynb  LSTM_FeaturesTuning.ipynb  LSTM_HyperPrametersTuning.ipynb  LSTM_Tunning.ipynb  LSTM_WindowSize_Tuning.ipynb  MeanBaseline_LSTMBaseline.ipynb  Nathan_data_pull.ipynb  census_nhu_data.py  climate_req.ipynb  congress_req.ipynb  df_merge.ipynb  log_stdout.py  travel.ipynb
ss24_capstone_team23_datallah_nkitts_steveso/CrimeData_Processing/: CrimeData_Processing_Plan.ipynb  Dallas-CrimeData-Processing.ipynb  LosAngeles-CrimeData-Processing.ipynb
ss24_capstone_team23_datallah_nkitts_steveso/LSTM/: LSTM_Chicago.ipynb  LSTM_Dallas.ipynb  LSTM_LosAngeles.ipynb  LSTM_NewYork.ipynb  LSTM_Seattle.ipynb
ss24_capstone_team23_datallah_nkitts_steveso/NewHomeBuilt_Processing/: DataDownloader.ipynb
(+121 files in other folders)
