[tool.poetry]
name = "ss24_capstone_team23_datallah_nkitts_steveso"
version = "0.1.0"
description = "Predicting home index value."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
pprintpp = "^0.4.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
notebook = "^7.2.1"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
